# minloggapa

./: .gitignore  .gitmodules  CMakeLists.txt  compile-debs.sh  compile.sh
.cache/clangd/index/: balance_configuration.h.DA2A3C3415853646.idx  basic_fm_mix.cpp.EE3E682240A044C7.idx  basic_refiner.cpp.A3A6068C56F85CB2.idx  basic_refiner.h.564F2A8EFD20D77C.idx  cli_reporter.cpp.DB059BD0AA8CA372.idx  cli_reporter.h.7EF6E16A12AD03BD.idx  configuration.h.D0DBA19FFB463805.idx  experiments.h.07352B561EB47755.idx  fm_refiner.cpp.8372785BAAA72313.idx  fm_refiner.h.F7EB880DD83527F9.idx  fm_refiner_quadtree.cpp.D31C5E134486BAB4.idx  fm_refiner_quadtree.h.B9505E10766408EC.idx  graphgen.cpp.CD6E4890231F64CC.idx  initial_partitioner_interface.h.D3A636C8C672D079.idx  kahip_initial_partitioner.cpp.F8137B8E3557AA59.idx  kahip_initial_partitioner.h.02085B74AFC3768A.idx  ls_improvement_test.cpp.14C14D3ED0BB9F80.idx  max_node_heap.h.3ED2EC8CA5CF0989.idx  metrics.cpp.A33F76D8079B8F82.idx  minloggapa.cpp.2ACCB8A99E906847.idx  permute.cpp.12591F6412159516.idx  query_graph.cpp.59993501B1200B96.idx  query_graph.h.6A9128F12EB1D71E.idx  random_initial_partitioner.cpp.E122131C3AA70E8E.idx  random_initial_partitioner.h.A3ADD6BC355EC02A.idx  refiner_interface.cpp.E98B88D870DDF7FF.idx  refiner_interface.h.A23346C354617FC9.idx  reporter.cpp.479B722D9B644ED3.idx  reporter.h.8C49193B1A612445.idx  sqlite_reporter.cpp.B15AC4CDD730C1B3.idx  sqlite_reporter.h.C93FBED9C57AF99B.idx  utils.cpp.F78353308AC3577D.idx  utils.h.AE5FDEF2A9F24F80.idx  x2kahip.cpp.DE188EDA76506082.idx
app/: CMakeLists.txt  experiments.h  minloggapa.cpp
experiments/: CMakeLists.txt  basic_fm_mix.cpp  fixed_imbalance.cpp  ls_improvement_test.cpp  small_graphs.cpp  xsocial.cpp  xsocial_full.cpp
lib/: CMakeLists.txt  utils.cpp  utils.h
lib/data-structure/: max_node_heap.h  query_graph.cpp  query_graph.h
lib/initial-partitioner/: initial_partitioner_interface.h  kahip_initial_partitioner.cpp  kahip_initial_partitioner.h  random_initial_partitioner.cpp  random_initial_partitioner.h
lib/refinement/: basic_refiner.cpp  basic_refiner.h  fm_refiner.cpp  fm_refiner.h  fm_refiner_quadtree.cpp  fm_refiner_quadtree.h  refiner_interface.cpp  refiner_interface.h
lib/report/: cli_reporter.cpp  cli_reporter.h  reporter.cpp  reporter.h  sqlite_reporter.cpp  sqlite_reporter.h
tools/: CMakeLists.txt  graphgen.cpp  metrics.cpp  permute.cpp  x2kahip.cpp
